<resources>
    <string name="app_name">VehicleSharingSystemAndroidApplication</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_authenticator">AuthenticatorActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters and contain at least one small and capital letter, one number and special character</string>
    <string name="invalid_phoneNumber">Not a valid phone number</string>
    <string name="invalid_name">The name must have between 2 and 30 characters and contain letters, /, . and ,</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_failed">"Register failed"</string>
    <string name="PAYMENT_OK">PAYMENT_OK</string>
    <string name="RENTAL_STARTED_OK">RENTAL_STARTED_OK</string>
    <string name="LOGOUT_OK">LOGOUT_OK</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="account_type_driver">driver</string>

    <!--EMULATOR-->

<!--    <string name="loginPath">http://10.0.2.2:8080/vsss/driver/authenticate</string>-->
<!--    <string name="registerPath">http://10.0.2.2:8080/vsss/driver/register</string>-->
<!--    <string name="checkUsernamePath">http://10.0.2.2:8080/vsss/driver/checkUsername</string>-->
<!--    <string name="getAllVehicles">http://10.0.2.2:8080/vsss/driver/getAllAvailableVehicles</string>-->
<!--    <string name="getAllSubscriptions">http://10.0.2.2:8080/vsss/administrator/getAvailableSubscriptions</string>-->
<!--    <string name="addSubscriptionToDriver">http://10.0.2.2:8080/vsss/driver/addSubscriptionToDriver</string>-->
<!--    <string name="addDrivingLicenseToDriver">http://10.0.2.2:8080/vsss/driver/setDriverLicense</string>-->
<!--    <string name="getDriverSubscription">http://10.0.2.2:8080/vsss/driver/getDriverSubscription/</string>-->
<!--    <string name="endRentalSession">http://10.0.2.2:8080/vsss/driver/endRentalSession</string>-->
<!--    <string name="startRentalSession">http://10.0.2.2:8080/vsss/driver/startRentalSession</string>-->
<!--    <string name="payRentalSession">http://10.0.2.2:8080/vsss/driver/payRentalSession</string>-->
<!--    <string name="cannotRentAnotherVehicle">End the current rental session to rent this vehicle</string>-->
<!--    <string name="loginToStartRenting">Log in to start renting vehicles</string>-->
<!--    <string name="getCurrentRentalSession">http://10.0.2.2:8080/vsss/driver/getCurrentRentalSession/</string>-->
<!--    <string name="getDocumentSubmissionStatus">http://10.0.2.2:8080/vsss/driver/hasSubmittedDocuments</string>-->
<!--    <string name="getDocumentValidationStatus">http://10.0.2.2:8080/vsss/driver/isValidatedAsLegalDriver</string>-->

    <!--CAMIN-->
<!--        <string name="loginPath">http://192.168.1.152:8080/vsss/driver/authenticate</string>-->
<!--        <string name="registerPath">http://192.168.1.152:8080/vsss/driver/register</string>-->
<!--        <string name="checkUsernamePath">http://192.168.1.152:8080/vsss/driver/checkUsername</string>-->
<!--        <string name="getAllVehicles">http://192.168.1.152:8080/vsss/driver/getAllAvailableVehicles</string>-->
<!--        <string name="getAllSubscriptions">http://192.168.1.152:8080/vsss/administrator/getAvailableSubscriptions</string>-->
<!--        <string name="addSubscriptionToDriver">http://192.168.1.152:8080/vsss/driver/addSubscriptionToDriver</string>-->
<!--        <string name="addDrivingLicenseToDriver">http://192.168.1.152:8080/vsss/driver/setDriverLicense</string>-->
<!--        <string name="getDriverSubscription">http://192.168.1.152:8080/vsss/driver/getDriverSubscription/</string>-->
<!--        <string name="endRentalSession">http://192.168.1.152:8080/vsss/driver/endRentalSession</string>-->
<!--        <string name="startRentalSession">http://192.168.1.152:8080/vsss/driver/startRentalSession</string>-->
<!--        <string name="payRentalSession">http://192.168.1.152:8080/vsss/driver/payRentalSession</string>-->
<!--        <string name="cannotRentAnotherVehicle">End the current rental session to rent this vehicle</string>-->
<!--        <string name="loginToStartRenting">Log in to start renting vehicles</string>-->
<!--        <string name="getCurrentRentalSession">http://192.168.1.152:8080/vsss/driver/getCurrentRentalSession/</string>-->
<!--    <string name="getDocumentSubmissionStatus">http://192.168.1.152:8080/vsss/driver/hasSubmittedDocuments</string>-->
<!--    <string name="getDocumentValidationStatus">http://192.168.1.152:8080/vsss/driver/isValidatedAsLegalDriver</string>-->

    <!--HOTSPOT-->

        <string name="loginPath">http://172.20.10.9:8080/vsss/driver/authenticate</string>
        <string name="registerPath">http://172.20.10.9:8080/vsss/driver/register</string>
        <string name="checkUsernamePath">http://172.20.10.9:8080/vsss/driver/checkUsername</string>
        <string name="getAllVehicles">http://172.20.10.9:8080/vsss/driver/getAllAvailableVehicles</string>
        <string name="getAllSubscriptions">http://172.20.10.9:8080/vsss/administrator/getAvailableSubscriptions</string>
        <string name="addSubscriptionToDriver">http://172.20.10.9:8080/vsss/driver/addSubscriptionToDriver</string>
        <string name="addDrivingLicenseToDriver">http://172.20.10.9:8080/vsss/driver/setDriverLicense</string>
        <string name="getDriverSubscription">http://172.20.10.9:8080/vsss/driver/getDriverSubscription/</string>
        <string name="endRentalSession">http://172.20.10.9:8080/vsss/driver/endRentalSession</string>
        <string name="startRentalSession">http://172.20.10.9:8080/vsss/driver/startRentalSession</string>
        <string name="payRentalSession">http://172.20.10.9:8080/vsss/driver/payRentalSession</string>
        <string name="cannotRentAnotherVehicle">End the current rental session to rent this vehicle</string>
        <string name="loginToStartRenting">Log in to start renting vehicles</string>
        <string name="getCurrentRentalSession">http://172.20.10.9:8080/vsss/driver/getCurrentRentalSession/</string>
        <string name="getDocumentSubmissionStatus">http://172.20.10.9:8080/vsss/driver/hasSubmittedDocuments</string>
        <string name="getDocumentValidationStatus">http://172.20.10.9:8080/vsss/driver/isValidatedAsLegalDriver</string>

    <!--ACASA-->

<!--    <string name="loginPath">http://192.168.0.32:8080/vsss/driver/authenticate</string>-->
<!--    <string name="registerPath">http://192.168.0.32:8080/vsss/driver/register</string>-->
<!--    <string name="checkUsernamePath">http://192.168.0.32:8080/vsss/driver/checkUsername</string>-->
<!--    <string name="getAllVehicles">http://192.168.0.32:8080/vsss/driver/getAllAvailableVehicles</string>-->
<!--    <string name="getAllSubscriptions">http://192.168.0.32:8080/vsss/administrator/getAvailableSubscriptions</string>-->
<!--    <string name="addSubscriptionToDriver">http://192.168.0.32:8080/vsss/driver/addSubscriptionToDriver</string>-->
<!--    <string name="addDrivingLicenseToDriver">http://192.168.0.32:8080/vsss/driver/setDriverLicense</string>-->
<!--    <string name="getDriverSubscription">http://192.168.0.32:8080/vsss/driver/getDriverSubscription/</string>-->
<!--    <string name="endRentalSession">http://192.168.0.32:8080/vsss/driver/endRentalSession</string>-->
<!--    <string name="startRentalSession">http://192.168.0.32:8080/vsss/driver/startRentalSession</string>-->
<!--    <string name="payRentalSession">http://192.168.0.32:8080/vsss/driver/payRentalSession</string>-->
<!--    <string name="cannotRentAnotherVehicle">End the current rental session to rent this vehicle</string>-->
<!--    <string name="loginToStartRenting">Log in to start renting vehicles</string>-->
<!--    <string name="getCurrentRentalSession">http://192.168.0.32:8080/vsss/driver/getCurrentRentalSession/</string>-->
<!--    <string name="getDocumentSubmissionStatus">http://192.168.0.32:8080/vsss/driver/hasSubmittedDocuments</string>-->
<!--    <string name="getDocumentValidationStatus">http://192.168.0.32:8080/vsss/driver/isValidatedAsLegalDriver</string>-->

    <!-- -->

    <string name="registerButtonInActivity">Register</string>
    <string name="more_info_needed_badge_register_activity">MORE INFO NEEDED</string>
    <string name="range_left_label">Range left:</string>
    <string name="horse_power_label">HP:</string>
    <string name="torque_label">Torque:</string>
    <string name="maximum_authorised_mass_label">Maximum mass:</string>
    <string name="nb_seats_label">Seats:</string>
    <string name="price_label">Price:</string>
    <string name="distance_travelled_label">Distance travelled:</string>
    <string name="amount_to_pay_label">Amount to pay:</string>
    <string name="user_menu_my_account_label">My account</string>
    <string name="user_menu_subscriptions_label">Subscriptions</string>
    <string name="user_menu_logout_label">Log out</string>
    <string name="subscription_km_limit_text">Kilometers limit</string>
    <string name="start_rental_session_button">Start rental session</string>
    <string name="finish_rental_session_button">Finish rental session</string>
    <string name="go_to_payment_button">GO TO PAYMENT</string>
    <string name="manufacturerModelYearText">%1$s %2$s %3$s</string>
    <string name="action_settings">Settings</string>
    <string name="subscription_select_an_option">Select an option:</string>
    <string name="subscription_get_it">GET IT!</string>
    <string name="subscription_selection_best_deal">BEST DEAL</string>
    <string name="payment_provider_promo">3DSecure. Pay Safe:</string>
    <string name="identity_verification_needed">Please submit a photos of required documents to start renting vehicles</string>
    <string name="identity_verification_needed_id">Valid ID</string>
    <string name="driving_license_required_label">Driving license</string>
    <string name="photographic_suggestion">Make sure the pictures are clear \n and contain only the document</string>
    <string name="card_number_label">Card Number:</string>
    <string name="card_expiration_date_label">Expiration Date:</string>
    <string name="card_cvv_label">CVV:</string>
    <string name="payment_activity_pay_button_text">Pay</string>
    <string name="slash">/</string>
    <string name="successfullyEndedRentalSessionText">You have successfully ended the rental session</string>
    <string name="continue_to_map">CONTINUE TO MAP</string>
    <string name="guest_button">Visualize vehicles as guest</string>
    <string name="take_photo_front_button">Take photo of front side</string>
    <string name="take_photo_front_button_taken">Front side picture taken</string>
    <string name="take_photo_back_button">Take photo of back side</string>
    <string name="take_photo_back_button_taken">Back side picture taken</string>
    <string name="submit_button">Submit</string>
    <string name="lock_button">LOCK THE VEHICLE</string>
    <string name="unlock_button">UNLOCK THE VEHICLE</string>
    <string name="camera_unavailable">Camera Unavailable</string>
    <string name="validation_in_progress">Validation of submitted documents still in progress</string>
</resources>

